--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
-    "@prisma/client": "^5.21.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-context-menu": "^2.2.1",
@@ -26,7 +25,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.375.0",
-    "next": "^14.2.15",
+    "next": "^15.0.0",
     "next-auth": "^5.0.0-beta.20",
     "next-safe-action": "^7.1.3",
     "next-themes": "^0.3.0",
@@ -43,13 +42,16 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@prisma/client": "^5.21.1",
     "@types/node": "^20.12.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^9.0.0",
     "eslint-config-next": "^14.2.4",
+    "i": "^0.3.7",
+    "npm": "^10.9.0",
     "postcss": "^8",
-    "prisma": "^5.21.0",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
